apps/bookinfo/ratings/overlays/dev/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
    - ratings
  http:
    - name: ratings-route
      timeout: 5s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream
      route:
        - destination:
            host: ratings
            port:
              number: 9080
          weight: 100
        - destination:
            host: ratings-canary
            port:
              number: 9080
          weight: 0
